--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 .container{
     
     width: 1000px;
-    height: 1200px;
+    height: 100%;
     padding: 10px;
 }
 .section-container{
@@ -22,6 +22,38 @@ body{
     height: 333px;
     margin-top: 10px;
     background-color: rgb(146, 146, 146);
+}
+
+.section-container2{
+    background-color: red;
+    width: 100%;
+    height: 60px;
+    position: relative;
+    margin-top: 20px;
+}
+
+#historico {
+    background-color: aqua;
+    height: 100%;
+    width: 50%;
+    display: block;
+
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+
+}
+#mensalista {
+    background-color: blueviolet;
+    height: 100%;
+    width: 50%;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
 }
 
 .title-div{
