--- a/style.css
+++ b/style.css
@@ -25,35 +25,44 @@ body{
 }
 
 .section-container2{
-    background-color: red;
     width: 100%;
-    height: 60px;
-    position: relative;
+    /*height: 100%;*/
+    /*position: relative;*/
     margin-top: 20px;
+    display: flex;
+    
+    height: 700px;
+
+
+
 }
 
 #historico {
-    background-color: aqua;
+    background-color: rgb(146, 146, 146);
     height: 100%;
     width: 50%;
+    margin-right: 3px;
+    /*
     display: block;
 
     border-style: solid;
     border-width: 1px;
     border-color: black;
-
+*/
 }
 #mensalista {
-    background-color: blueviolet;
+    background-color: rgb(146, 146, 146);
     height: 100%;
     width: 50%;
-    display: block;
+    margin-left: 3px;
+    /*display: block;
     position: absolute;
     right: 0;
     top: 0;
     border-style: solid;
     border-width: 1px;
     border-color: black;
+    */
 }
 
 .title-div{
@@ -79,6 +88,11 @@ input[type="submit"]{
     background-color: green;
     width: 100px;
     cursor: pointer;
+}
+#inputName {
+    margin-top: 10px;
+    font-size: 20px;
+    margin-bottom: 20px;
 }
 p{
     color: red;
